test/tests/bad/cast-poly2.carth
;; NoClassInstance

(import std)

(define (foo a)
  (cast a))

(define: (bar Unit)
    (Fun Unit Int)
  (foo (Some 5)))
